@@ -204,7 +204,7 @@ public final class FieldInfo {
   }
 
   void setDocValuesType(DocValuesType type) {
-    if (docValueType != null && docValueType != type) {
+    if (docValueType != null && type != null && docValueType != type) {
       throw new IllegalArgumentException("cannot change DocValues type from " + docValueType + " to " + type + " for field \"" + name + "\"");
     }
     docValueType = type;
